--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "elm make src/Main.elm --output=public/index.html",
+    "dev": "elm-live src/Main.elm --open --pushstate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "elm": "^0.19.1-3"
+  },
+  "devDependencies": {
+    "elm-format": "^0.8.2",
+    "elm-live": "^4.0.1"
   }
 }
